# wallet-registry-demo

./: docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
containers/api/: Dockerfile
containers/authentic_source/: Dockerfile
containers/registry/: Dockerfile
src/wallet/: __init__.py  add_credential.py  authentic_source.py  authentic_source_fetch_degree.py  authentic_source_login.py  registry.py  verify_credential.py
src/wallet_registry/: main.py  revoke_credential.py
