description = "Python wallet registry demo"
version = "0.92"

[build-system]
requires = [
    "flit_core >=2.0",
]

[tool.flit.metadata]
module = "wallet_registry"

description-file = "README.md"
requires-python = ">=3.8"

keywords = "wallet,registry"
license = "MIT"
author = "Victor Näslund"
author-email = "victor@sunet.se"
home-page = "https://github.com/SUNET/wallet_registry_demo"

requires = [
    "uvicorn[standard]",
    "fastapi",
    "redis",
    "cryptography",
    "requests",
    "openapi_schema_validator"
]


[tool.mypy]
strict = true
mypy_path = "src"
packages = "wallet_registry"

# [[tool.mypy.overrides]]
# module = [
#     "asn1crypto",
#     "asn1crypto.keys",
#     "asyncpg",
#     "asyncpg.pool",
#     "asyncpg.exceptions",
#     "pkcs11.exceptions",
# ]
ignore_missing_imports = true

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
line-length = 120

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MASTER']
extension-pkg-whitelist = "pydantic"

[tool.pylint.'MESSAGES CONTROL']
disable = "too-many-lines"
